# xme

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Dockerfile  README.md
benchmarks/: CMakeLists.txt  vector_operator.cpp
benchmarks/container/: CMakeLists.txt  array.cpp  heap.cpp  pair_homogeneous.cpp  tuple_heterogeneous.cpp  tuple_homogeneous.cpp  tuple_single.cpp
benchmarks/core/algorithm/: CMakeLists.txt  find.cpp  reverse.cpp
benchmarks/core/functional/: CMakeLists.txt  delegate.cpp
benchmarks/functional/: delegate.cpp
cmake/: utils.cmake
include/xme/: CMakeLists.txt  setup.hpp
include/xme/HAL/: platform.hpp  platform_macros.hpp  shared_library.hpp  simd_detection.hpp
include/xme/HAL/windows/: platform.hpp  platform_macros.hpp
include/xme/algorithm/: min_max.hpp  rotate.hpp
include/xme/bit/: byteswap.hpp  has_single_bit.hpp  popcount.hpp  rotate.hpp
include/xme/container/: aligned_data.hpp  array.hpp  array_view.hpp  concepts.hpp  container.hpp  container_policy.hpp  heap.hpp  icontainer.hpp  iview.hpp  linked_list.hpp  pair.hpp  spsc_queue.hpp  tuple.hpp
include/xme/core/algorithm/: find.hpp  reverse.hpp
include/xme/core/bit/: has_single_bit.hpp
include/xme/core/concepts/: arithmetic.hpp  assignable.hpp  boolean_testable.hpp  common.hpp  (+16 more)
include/xme/functional/: bind.hpp  delegate.hpp
include/xme/hal/: architecture_detection.hpp  compiler_detection.hpp  platform.hpp  platform_macros.hpp  shared_library.hpp  simd_detection.hpp  std_detection.hpp
include/xme/iterators/: contiguous_iterator.hpp  reverse_iterator.hpp
include/xme/math/: README.md  concepts.hpp  constants.hpp  forward.hpp  geometric.hpp  glsl_mapping.hpp  math.hpp  matrix.hpp  normal.hpp  quaternion.hpp  trigonometric.hpp  type_traits.hpp  vector.hpp
include/xme/platform/: architecture.hpp  architecture_detect.hpp  generic_platform.hpp  os.hpp  os_detect.hpp  platform.hpp  shared_library.hpp  simd_detect.hpp
include/xme/ranges/: access.hpp  adaptors.hpp  all.hpp  base.hpp  concepts.hpp  destroy.hpp  enumerate.hpp  iview.hpp  range_access.hpp  swap.hpp  traits.hpp  uninitialized.hpp  view_interface.hpp  views.hpp
include/xme/utility/: forward_like.hpp
modules/: CMakeLists.txt  xme.cppm  xme.ixx
modules/algorithm/: algorithm.ixx
modules/bit/: bit.ixx
modules/container/: container.cppm  container.ixx
modules/core/functional/: functional.cppm
modules/core/iterators/: iterators.cppm
modules/core/utility/: utility.cppm
modules/functional/: functional.ixx
modules/iterators/: iterators.cppm
modules/math/: math.cppm  math.ixx
modules/utility/: utility.ixx
private/container/: array_base.hpp  linked_list_base.hpp  spsc_queue_base.hpp  tuple_base.hpp
private/iterators/: contiguous_iterator.hpp
private/math/: forward.hpp
private/math/matrices/: io.hpp  matrix4x4.hpp  matrix_clip.hpp  matrix_operators.hpp  methods.hpp  operators.hpp
private/math/vectors/: io.hpp  methods.hpp  operators.hpp  vector2.hpp  vector3.hpp  vector4.hpp  vector_operators.hpp  vector_piecewise.hpp
private/ranges/: class_or_enum.hpp  setup.hpp
tests/: CMakeLists.txt
tests/algorithm/: CMakeLists.txt  minmax.cpp  rotate.cpp
tests/bit/: CMakeLists.txt  byteswap.cpp  popcount.cpp  rotate.cpp
tests/container/: CMakeLists.txt  aligned_data.cpp  array.cpp  array_view.cpp  common.hpp  heap.cpp  icontainer.cpp  linked_list.cpp  linked_list_assign.cpp  linked_list_constructor.cpp  linked_list_emplace.cpp  linked_list_erase.cpp  linked_list_insert.cpp  linked_list_operations.cpp  linked_list_push_pop.cpp  pair.cpp  spsc.cpp  tuple.cpp
tests/container/array/: CMakeLists.txt  array.cpp  array_constructor.cpp
tests/container/linked_list/: CMakeLists.txt  linked_list_assign.cpp  linked_list_constructor.cpp  linked_list_emplace.cpp  linked_list_erase.cpp  linked_list_insert.cpp  linked_list_operations.cpp  linked_list_push_pop.cpp
tests/container/pair/: CMakeLists.txt  pair_assign.cpp  pair_construction.cpp  pair_operations.cpp
tests/container/spsc_queue/: CMakeLists.txt  spsc_constructor.cpp  spsc_dynamic.cpp
tests/container/tuple/: CMakeLists.txt  tuple.cpp  tuple_access.cpp  tuple_assign.cpp  tuple_construction.cpp  tuple_operations.cpp  tuple_traits.cpp
tests/core/: CMakeLists.txt  algorithm.cpp  aligned_data.cpp  concepts.cpp  functional.cpp  iterators.cpp  type_traits.cpp  utility.cpp
tests/core/concepts/: CMakeLists.txt  concepts.cpp
tests/core/functional/: CMakeLists.txt  bind.cpp  delegate.cpp  scoped_delegate.cpp
tests/core/iterators/: CMakeLists.txt  contiguous_iterator.cpp  reverse_iterator.cpp
tests/core/type_traits/: CMakeLists.txt  is_scoped_enum.cpp
tests/core/utility/: CMakeLists.txt  forward_like.cpp
tests/functional/: CMakeLists.txt  bind.cpp  common.hpp  delegate.cpp
tests/iterators/: CMakeLists.txt  contiguous_iterator.cpp  reverse_iterator.cpp
tests/math/: CMakeLists.txt  math_type_traits.cpp  matrix.cpp  matrix4x4.cpp  matrix_constructor.cpp  matrix_multiplication.cpp  quaternion.cpp  vector.cpp  vector2.cpp  vector3.cpp  vector4.cpp  vector_operator.cpp  vector_self_operator.cpp
tests/math/matrices/: CMakeLists.txt  common.hpp  mat_access.cpp  mat_constructor.cpp  mat_constructor_square.cpp  mat_constructor_vec.cpp  mat_multiplication.cpp  mat_multiplication_vec.cpp  mat_operator_arithmetic.cpp  mat_operator_self.cpp  mat_operator_unary.cpp
tests/math/simd/: CMakeLists.txt  vec_simd.cpp
tests/math/vectors/: CMakeLists.txt  common.hpp  vec_access.cpp  vec_arithmetic_operator.cpp  vec_constructor.cpp  vec_conversion_constructor.cpp  vec_deduction_guide.cpp  vec_methods.cpp  vec_operator_arithmetic.cpp  vec_operator_equality.cpp  vec_operator_self.cpp  vec_operator_unary.cpp  vec_self_operator.cpp  vector_constructor.cpp  vector_conversion_constructor.cpp  vector_methods.cpp  vector_operator.cpp  vector_self_operator.cpp
tests/modules/: CMakeLists.txt  xme.cpp
tests/platform/: CMakeLists.txt  simd.cpp
tests/ranges/: CMakeLists.txt  access.cpp  all.cpp  enumerate.cpp  swap.cpp  views.cpp
tests/utility/: forward_like.cpp
(+47 files in other folders)
